--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                         <div class="overflow-hidden rounded partner-card" style="position: relative;">
                             <img src="./img/Partners/Envelope 2.png" class="img-fluid w-100 partner-img" alt="">
                             <div class="partner-overlay d-flex align-items-center justify-content-center">
-                                <a href="#" class="btn btn-primary">Explore More</a>
+                                <a href="./hotels.php" class="btn btn-primary">Explore More</a>
                             </div>
                         </div>
                         <div class="blog-content mx-4 d-flex rounded bg-blue">
@@ -501,7 +501,7 @@
                                     <p class="fw-bold mb-0">25</p>
                                 </div>
                             </div>
-                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text bg-blue text-white">Hotels</a>
+                            <a href="./hotels.php" class="h5 lh-base my-auto h-100 p-3 custom-hover-text bg-blue text-white">Hotels</a>
                         </div>
                     </div>
                 </div>
