--- a/index.html
+++ b/index.html
@@ -415,11 +415,20 @@
         <br>
         <div class="container">
             <div class="row justify-content-center">
+                <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated"
+                    data-wow-duration="300ms"
+                    style="visibility: visible; animation-duration: 300ms; animation-name: fadeInUp;">
+                    <i class="fa fa-handshake-o medium-icon font-red"></i>
+                    <span id="anim-number-pizza" class="counter-number"></span>
+                    <span class="timer counter alt-font appear text-white" data-to="24"
+                        data-speed="4">24</span>
+                    <p class="counter-title">Festival Partners</p>
+                </div>
                 <!-- counter -->
                 <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated"
                     data-wow-duration="300ms"
                     style="visibility: visible; animation-duration: 300ms; animation-name: fadeInUp;">
-                    <i class="fa fa-beer medium-icon font-red"></i>
+                    <i class="fa fa-users medium-icon font-red"></i>
                     <span id="anim-number-pizza" class="counter-number"></span>
                     <span class="timer counter alt-font appear text-white" data-to="24"
                         data-speed="4">24</span>
@@ -430,7 +439,7 @@
                 <div class="col-md-3 col-sm-6 bottom-margin text-center counter-section wow fadeInUp sm-margin-bottom-ten animated"
                     data-wow-duration="600ms"
                     style="visibility: visible; animation-duration: 600ms; animation-name: fadeInUp;">
-                    <i class="fa fa-heart medium-icon font-red"></i>
+                    <i class="fa fa-music medium-icon font-red"></i>
                     <span class="timer counter alt-font appear text-white" data-to="6"
                         data-speed="1">6</span>
                     <span class="counter-title">Main Festival Events</span>
@@ -440,7 +449,7 @@
                 <div class="col-md-3 col-sm-6 bottom-margin-small text-center counter-section wow fadeInUp xs-margin-bottom-ten animated"
                     data-wow-duration="900ms"
                     style="visibility: visible; animation-duration: 900ms; animation-name: fadeInUp;">
-                    <i class="fa fa-anchor medium-icon font-red"></i>
+                    <i class="fa fa-ticket medium-icon font-red"></i>
                     <span class="timer counter alt-font appear text-white" data-to="1" data-speed="1">1</span>
                     <span class="counter-title">Pass - Big City Festival</span>
                 </div>
@@ -489,7 +498,7 @@
                 <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.1s">
                     <div class="blog-item">
                         <div class="overflow-hidden rounded partner-card" style="position: relative;">
-                            <img src="./img/Partners/Envelope 2.png" class="img-fluid w-100 partner-img" alt="">
+                            <img src="./img/hotel_res/HOTELS.png" class="img-fluid w-100 partner-img" alt="">
                             <div class="partner-overlay d-flex align-items-center justify-content-center">
                                 <a href="./hotels.php" class="btn btn-primary">Explore More</a>
                             </div>
@@ -508,9 +517,9 @@
                 <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.3s">
                     <div class="blog-item">
                         <div class="overflow-hidden rounded partner-card" style="position: relative;">
-                            <img src="./img/Partners/Envelope 2.png" class="img-fluid w-100 partner-img" alt="">
+                            <img src="./img/hotel_res/RESTURANTS.png" class="img-fluid w-100 partner-img" alt="">
                             <div class="partner-overlay d-flex align-items-center justify-content-center">
-                                <a href="#" class="btn btn-primary">Explore More</a>
+                                <a href="./resturant.php" class="btn btn-primary">Explore More</a>
                             </div>
                         </div>
                         <div class="blog-content mx-4 d-flex rounded bg-blue">
@@ -520,16 +529,16 @@
                                     <p class="fw-bold mb-0">25</p>
                                 </div>
                             </div>
-                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text text-white">Resturants</a>
+                            <a href="./resturant.php" class="h5 lh-base my-auto h-100 p-3 custom-hover-text text-white">Resturants</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 wow bounceInUp" data-wow-delay="0.5s">
                     <div class="blog-item">
                         <div class="overflow-hidden rounded partner-card" style="position: relative;">
-                            <img src="./img/Partners/Envelope 2.png" class="img-fluid w-100 partner-img" alt="">
+                            <img src="./img/hotel_res/EXPERIENCES.png" class="img-fluid w-100 partner-img" alt="">
                             <div class="partner-overlay d-flex align-items-center justify-content-center">
-                                <a href="#" class="btn btn-primary">Explore More</a>
+                                <a href="./experiance.php" class="btn btn-primary">Explore More</a>
                             </div>
                         </div>
                         <div class="blog-content mx-4 d-flex rounded bg-blue">
@@ -539,7 +548,7 @@
                                     <p class="fw-bold mb-0">25</p>
                                 </div>
                             </div>
-                            <a href="#" class="h5 lh-base my-auto h-100 p-3 custom-hover-text text-white">Experiences</a>
+                            <a href="./experiance.php" class="h5 lh-base my-auto h-100 p-3 custom-hover-text text-white">Experiences</a>
                         </div>
                     </div>
                 </div>
@@ -566,45 +575,41 @@
 
                     <div class="swiper-slide">
                     <div class="card">
-                        <img src="./img/together/1.png" class="card-img-top" alt="Poster 1">
+                        <img src="./img/Artist/cold sweat.png" class="card-img-top" alt="Poster 1">
                     </div>
                     </div>
 
                     <div class="swiper-slide">
                     <div class="card">
-                        <img src="./img/together/2.png" class="card-img-top" alt="Poster 2">
+                        <img src="./img/Artist/cream.png" class="card-img-top" alt="Poster 2">
                     </div>
                     </div>
 
                     <div class="swiper-slide">
                     <div class="card">
-                        <img src="./img/together/3.png" class="card-img-top" alt="Poster 3">
+                        <img src="./img/Artist/halftime.png" class="card-img-top" alt="Poster 3">
                     </div>
                     </div>
 
                     <div class="swiper-slide">
                     <div class="card">
-                        <img src="./img/together/4.png" class="card-img-top" alt="Poster 4">
+                        <img src="./img/Artist/hot chcocolate.png" class="card-img-top" alt="Poster 4">
                     </div>
                     </div>
 
                     <div class="swiper-slide">
                     <div class="card">
-                        <img src="./img/together/5.png" class="card-img-top" alt="Poster 5">
+                        <img src="./img/Artist/INFINITY.png" class="card-img-top" alt="Poster 5">
                     </div>
                     </div>
 
                     <div class="swiper-slide">
                     <div class="card">
-                        <img src="./img/together/6.png" class="card-img-top" alt="Poster 6">
+                        <img src="./img/Artist/saxido.png" class="card-img-top" alt="Poster 6">
                     </div>
                     </div>
 
-                    <div class="swiper-slide">
-                    <div class="card">
-                        <img src="./img/together/7.png" class="card-img-top" alt="Poster 7">
-                    </div>
-                    </div>
+                   
 
                 </div>
                 </div>
