--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div id="spinner" 
     class="show w-100 vh-100 bg-white position-fixed translate-middle top-50 start-50 d-flex flex-column align-items-center justify-content-center bg-white">
     <div class="spinner-image-wrapper" style="position: relative; display: inline-block;">
-        <img src="img/logo/logo.png" alt="Loading..." style="width: 250px; height: auto; object-fit: contain;">
+        <img src="./img/logo/logo.png" alt="Loading..." style="width: 250px; height: auto; object-fit: contain;">
         <svg class="spinner-ring" width="340" height="340" viewBox="0 0 100 100" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
             <circle cx="50" cy="50" r="45" fill="none" stroke="#1b457f" stroke-width="1" stroke-linecap="round"/>
         </svg>
